--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>db</artifactId>
+	<groupId>com.mindera</groupId>
+	<artifactId>users</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>db</name>
-	<description>Demo project for Spring Boot</description>
+	<name>users</name>
+	<description>Users project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
